package proto;

message GateInHeader {
    required uint32 uid = 1;
    required uint32 tsid = 2;
    required uint32 sid = 3;
}

message GateInPack {
    required GateInHeader header = 1;
    required uint32 uri = 2;
    required bytes bin = 3;
}

message GateOutPack {
    repeated uint32 uids = 1;
    optional uint32 tsid = 2;
    optional uint32 sid = 3;
    required bytes bin = 4;
}

message GiftCbPack {
    required  string Tsid         = 1;
    required  string FromUid     = 2;
    required  string ToUid       = 3;
    required  string GiftId      = 4;
    required  string GiftCount   = 5;
    required  string OrderId     = 6;
    required  string Op          = 7;
}
